# TenderMate

./: .env.example  .gitignore  CHANGELOG.md  README.md
backend/: .env.example  alembic.ini  pyproject.toml
backend/app/: config.py  main.py
backend/app/api/: analysis.py  company_profile.py  router.py  settings.py  tenders.py
backend/app/models/: __init__.py  analysis.py  analysis_document.py  app_settings.py  company_profile.py  portfolio_project.py  team_member.py  tender.py  tender_attachment.py  user.py  verification_file.py
backend/app/prompts/: step0_eligibility.txt
backend/app/schemas/: analysis.py  company_profile.py  tender.py
backend/app/scrapers/: base.py  bazakonkurencyjnosci.py  ezamowienia.py  logintrade.py  registry.py
backend/app/services/: analysis_service.py  claude_service.py  concurrency.py  scraper_service.py
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/api/: analysis.ts  companyProfile.ts  settings.ts  tenders.ts
frontend/src/components/: PdfViewer.vue
frontend/src/components/analysis/: CopyableText.vue
frontend/src/components/layout/: AppLayout.vue  AppSidebar.vue
frontend/src/composables/: useStatusLabels.ts
frontend/src/pages/: AnalysisPage.vue  CompanyProfilePage.vue  DashboardPage.vue  NewTenderPage.vue  SettingsPage.vue  TenderDetailPage.vue  TenderListPage.vue
frontend/src/router/: index.ts
frontend/src/types/: analysis.ts  companyProfile.ts  tender.ts
scripts/: dev.sh  install-services.sh  tendermate-backend.service  tendermate-frontend.service
